--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 $purple: #8844ee;
+$purple-gradient: linear-gradient(to bottom, #8844ee 0%,#915dad 100%);
 $green: #1abc9c;
 $white: #fff;
 $gray: #555;
-$light-gray: #6d6d6d;
+$light-gray: #f5f5f5;
 $font: 'Nunito';
 
 body {
@@ -29,18 +30,19 @@ body {
     color: $gray;
     border: none;
     border-bottom: 1px solid $green;
-    &:focus{
+    &:focus {
       outline: none;
     };
   }
-  .title{
+  .title {
     color: $purple;
     text-align: center;
   }
   .header {
-    height: 50px;
+    height: 40px;
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
     .noteTitle {
       height: 30px;
       font-size: 12pt;
@@ -51,42 +53,74 @@ body {
       font-size: 12pt;
       height: 30px;
       transform: translateY(10px);
-    }
-  }
-  .actions{
-    text-align: center;
-    height: 100px;
-    .remove {
-      height: 22px;
-      width: 22px;
-      padding: 3px;
       cursor: pointer;
-      transform: translateY(10px);
-      &:hover{
+      &:hover {
         opacity: 0.5;
       };
     }
-    .selectAll {
-      height: 30px;
-    }
   }
-  .wrapper{
+  .wrapper {
     display: flex;
     justify-content: center;
-    .notes {
-      width: 300px;
-      li {
-        width: 200px;
-        cursor: pointer;
-        list-style: none;
-        .highlight {
-          color: $white;
-          background: $purple;
+    height: 100%;
+    .listHeader {
+      height: 300px;
+      background-color: $light-gray;
+      min-width: 50vw;
+      .actions {
+        height: 40px;
+        margin: 20px;
+        border-bottom: 1px solid $green;
+        .remove {
+          float: right;
+          height: 22px;
+          width: 22px;
+          cursor: pointer;
+          transform: translateY(5px);
+          &:hover{
+            opacity: 0.5;
+          };
+        }
+        .selectAll {
+          height: 30px;
+          width: 300px;
+        }
+
+      }
+      .notes {
+        margin: 15px;
+        li {
+          cursor: pointer;
+          list-style: none;
+          .highlight {
+            color: $white;
+            background: $purple;
+          }
         }
       }
     }
-    .details{
-      width: 400px;
+    .details {
+      padding-top: 45px;
+      min-width: 50vw;
+      border: none;
+      border-left: 1px solid $purple;
+      background: $purple-gradient;
+      display: flex;
+      justify-content: center;
+      textarea {
+        border: none;
+        resize: none;
+        min-width: 45vw;
+        height: 90%;
+        color: $white;
+        background: transparent;
+        &:focus {
+          outline: none;
+        };
+        &::placeholder {
+          color: $white;
+        }
+      }
     }
   }
 }
